--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Listen to Wikipedia</string>
     <string name="action_settings">Settings</string>
     <string name="contact_email">michael@mdholloway.org</string>
+    <string name="attribution_label">main</string>
 </resources>
